--- a/fourier-radio-p2/src/App.css
+++ b/fourier-radio-p2/src/App.css
@@ -8,6 +8,17 @@ height: 85vh;
 align-items: center;
 }
 
+.Audio {
+border: solid black;
+display: flex;
+flex-direction: column;
+}
+
+.controls {
+display: flex;
+justify-content: center;
+}
+
 h1, h2 {
   text-align: center;
 }
